[gd_scene load_steps=11 format=3 uid="uid://bq5avml0yisrs"]

[ext_resource type="Texture2D" uid="uid://c5itvl56fpost" path="res://assets/Art/Shell_machine_one.png" id="1_lkdww"]
[ext_resource type="Script" uid="uid://bwlwjeqhp81bd" path="res://scripts/potion_factory.gd" id="2_ori5s"]
[ext_resource type="PackedScene" uid="uid://b83fayupakw03" path="res://scenes/prefabs/potion.tscn" id="3_xkgqs"]
[ext_resource type="PackedScene" uid="uid://bxc82hg4i0gxw" path="res://scenes/prefabs/upgrade_button.tscn" id="4_lkdww"]
[ext_resource type="Script" uid="uid://ddd0d4bgt68k0" path="res://scripts/Resources/upgrade_factory.gd" id="5_wtvba"]

[sub_resource type="Animation" id="Animation_lkdww"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_561fn"]
resource_name = "idle"
length = 0.875
loop_mode = 1
step = 0.12
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_gk1xk"]
resource_name = "shoot_2_potions"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 3, 1, 2, 3, 4, 5, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(1, 1),
"values": [{
"args": [],
"method": &"spawn_potion"
}, {
"args": [],
"method": &"spawn_potion"
}]
}

[sub_resource type="Animation" id="Animation_wtvba"]
resource_name = "shoot_potion"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 3, 2, 4, 5, 2, 7]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"spawn_potion"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gk1xk"]
_data = {
&"RESET": SubResource("Animation_lkdww"),
&"idle": SubResource("Animation_561fn"),
&"shoot_2_potions": SubResource("Animation_gk1xk"),
&"shoot_potion": SubResource("Animation_wtvba")
}

[node name="PotionFactory" type="Sprite2D"]
z_index = 10
position = Vector2(0, -64)
texture = ExtResource("1_lkdww")
hframes = 7
vframes = 2
frame = 7
script = ExtResource("2_ori5s")
potion = ExtResource("3_xkgqs")

[node name="SpawnRate" type="Timer" parent="."]
wait_time = 5.2
autostart = true

[node name="PotionContainer" type="Node2D" parent="."]

[node name="UpgradeFactory" parent="." node_paths=PackedStringArray("upgrade_function") instance=ExtResource("4_lkdww")]
z_index = -5
position = Vector2(0, -73)
descriptions = Array[String](["Factory+"])
upgrade_function = NodePath("UpgradeFactory")

[node name="UpgradeFactory" type="Node" parent="UpgradeFactory"]
script = ExtResource("5_wtvba")
metadata/_custom_type_script = "uid://ddd0d4bgt68k0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_gk1xk")
}

[connection signal="timeout" from="SpawnRate" to="." method="_on_spawn_rate_timeout"]
